Fix issue with card disappearing in overflow and made list dense

--- a/frontend/app/styles/dashboard.module.scss
+++ b/frontend/app/styles/dashboard.module.scss
@@ -36,6 +36,7 @@
 	border-radius: 1em !important;
 	width: 12em;
 	margin: 1em;
+	overflow: visible !important;
 
 	h4 {
 		font-size: 1.2em;
